Tue Jul  8 00:37:50 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (process_options): no need to call rb_w32_parse_cmdline() if
	  locale == default_external.

Tue Jul  8 00:33:46 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (process_options): re-set e_script.

Tue Jul  8 00:03:20 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/win32/win32.c (rb_w32_parse_cmndline): new
	  function to parse command line from GetCommandLineW().
	  this is incomplete.

	* ruby.c (process_options): use rb_w32_parse_cmdline(). this is
	  incomplete, too.

	* win32/win32.c (rb_w32_write_console): sorry, pullup mistake.

Mon Jul  7 20:39:28 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c(Init_win32ole): add
	  WIN32OLE_TYPE#source_ole_types, WIN32OLE_TYPE#default_ole_types,
	  WIN32OLE_TYPE#default_event_sources.

	* test/win32ole/test_win32ole_type.rb: ditto.

Mon Jul  7 19:45:22 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/ruby/test_dir.rb (test_chroot_nodir): add Errno::EPERM.

Mon Jul  7 17:12:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ipaddr.rb (IPAddr#initialize): get rid of ArgumentError in
	  IPAddr#to_range.  a patch from okkez <okkez000 AT gmail.com> in
	  [ruby-dev:35091].

Mon Jul  7 01:24:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_extname): fix for file name with spaces.
	  [ruby-talk:307404]

Mon Jul  7 00:59:37 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread_pthread.c (ruby_init_stack): prior STACK_END_ADDRESS if
	  found.  [ruby-core:17624]

Sun Jul  6 23:48:06 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/socket.c (bsock_send, s_recvfrom, ruby_connect, s_accept),
	  (udp_send, unix_send_io, unix_recv_io): blocking region support.

Sun Jul  6 18:34:35 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_type.rb (test_initialize): add 
	  more assertions.

Sun Jul  6 10:12:21 2008  Kouhei Sutou  <kou@cozmixng.org>
